Modification details, comments, adding doc spec.yml
